# ISM-bolt

./: .boltignore  .env.example  .gitignore  .vercelignore  AI_ARCHITECTURE.md  AI_COMPONENTS_TECHNICAL_INDEX.md  AI_ONBOARDING_TEST_GUIDE.md  CLEANUP_PLAN.md  CODEBASE_INDEX.md  CODEBASE_MASTERY_GUIDE.md  COMPREHENSIVE_FEATURE_CHECKLIST.md  DEMO_GUIDE.md  DEMO_README.md  DEMO_READY_SUMMARY.md  DEMO_VIDEO_SETUP.md  DEPLOYMENT_README.md  DEVELOPER_QUICKSTART.md  FLASH_CARDS_COMPLETE.md  INVESTOR_FLOWCHART.html  INVESTOR_PRESENTATION.md  LAUNCH_CHECKLIST.md  LAUNCH_READINESS_CHECKLIST.md  MARKET_RESEARCH.md  PERFECT_MIGRATION_SCRIPT.bat  PERFECT_MIGRATION_SCRIPT.ps1  PRODUCTION_CONFIG.md  PRODUCTION_DEMO_README.md  PRODUCTION_READINESS.md  PROJECT_DOCUMENTATION.md  PRO_EDITION_GUIDE.md  QUICK_REFERENCE_GUIDE.md  QUICK_START_GUIDE.md  README.md  README_DEMO.md  REAL_DEMO_STATUS.md  STUDY_BOOK.docx  STUDY_BOOK.md  STUDY_BOOK_MODULES_3-8_COMPLETE.md  STUDY_BOOK_MODULE_1.md  STUDY_BOOK_MODULE_2.md  (+263 more)
ai_service/: __init__.py  ai_orchestrator.py  api_clients.py  gnn_reasoning.py  matching_engine.py  neural_components.py
ai_service_flask/: Dockerfile  README.md  __init__.py  advanced_analytics_service.py  ai_gateway.py  ai_pricing_service_wrapper.py  federated_learning_service.py  gnn_inference_service.py  logistics_service_wrapper.py  multi_hop_symbiosis_service.py  requirements.txt  requirements_fixed.txt
archive/: ai_listings_generator.py  ai_quality_monitor.py  backend_mlflow.db  backend_system_health.db  check_materials_table.py  enhanced_ai_generator.py  quick_test.ps1  (+14 more)
(+499 files in other folders)
